Get rid of unnecessary serializing/deserializing of query store analysis