@@ -1,14 +1,9 @@
 package org.carball.aden.parser;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.carball.aden.model.query.QueryStoreQuery;
+import org.carball.aden.model.query.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.io.TempDir;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
@@ -21,16 +16,13 @@ import static org.junit.jupiter.api.Assertions.*;
 class QueryStoreAnalyzerTest {
     
     private QueryStoreAnalyzer analyzer;
-    private ObjectMapper objectMapper;
-    
     @BeforeEach
     void setUp() {
         analyzer = new QueryStoreAnalyzer();
-        objectMapper = new ObjectMapper();
     }
     
     @Test
-    void testAnalyzeCustomerProfileQueries(@TempDir Path tempDir) throws IOException {
+    void testAnalyzeCustomerProfileQueries() {
         // Create test queries simulating Customer+Profile pattern
         List<QueryStoreQuery> queries = Arrays.asList(
             createTestQuery("1", 
@@ -43,116 +35,89 @@ class QueryStoreAnalyzerTest {
                 50, 0.3, 0.2, 2.0)
         );
         
-        // Analyze and export
-        File outputFile = tempDir.resolve("test_analysis.json").toFile();
-        analyzer.analyzeAndExport(queries, outputFile.getAbsolutePath(), "TestDB");
-        
-        // Verify file created
-        assertTrue(outputFile.exists());
-        
-        // Parse and verify JSON structure
-        @SuppressWarnings("unchecked")
-        Map<String, Object> analysis = objectMapper.readValue(outputFile, Map.class);
+        // Analyze
+        QueryStoreAnalysis analysis = analyzer.analyze(queries, "TestDB");
         
         // Verify metadata
-        assertEquals("TestDB", analysis.get("database"));
-        assertEquals("QUERY_STORE_PRODUCTION_METRICS", analysis.get("analysisType"));
-        assertEquals(2, analysis.get("totalQueriesAnalyzed"));
+        assertEquals("TestDB", analysis.getDatabase());
+        assertEquals("QUERY_STORE_PRODUCTION_METRICS", analysis.getAnalysisType());
+        assertEquals(2, analysis.getTotalQueriesAnalyzed());
         
         // Verify qualified metrics
-        @SuppressWarnings("unchecked")
-        Map<String, Object> metrics = (Map<String, Object>) analysis.get("qualifiedMetrics");
+        QualifiedMetrics metrics = analysis.getQualifiedMetrics();
         assertNotNull(metrics);
         
         // Check operation breakdown
-        @SuppressWarnings("unchecked")
-        Map<String, Object> operations = (Map<String, Object>) metrics.get("operationBreakdown");
-        assertEquals(1000, ((Number) operations.get("SELECT")).intValue());
-        assertEquals(50, ((Number) operations.get("UPDATE")).intValue());
+        Map<String, Long> operations = metrics.getOperationBreakdown();
+        assertEquals(1000L, operations.get("SELECT").longValue());
+        assertEquals(50L, operations.get("UPDATE").longValue());
         
         // Check read/write ratio
-        double readWriteRatio = (Double) metrics.get("readWriteRatio");
+        double readWriteRatio = metrics.getReadWriteRatio();
         assertEquals(20.0, readWriteRatio, 0.01);
-        assertTrue((Boolean) metrics.get("isReadHeavy"));
+        assertTrue(metrics.isReadHeavy());
         
         // Check table co-access patterns
-        @SuppressWarnings("unchecked")
-        Map<String, Object> tablePatterns = (Map<String, Object>) metrics.get("tableAccessPatterns");
-        assertTrue((Boolean) tablePatterns.get("hasStrongCoAccessPatterns"));
+        TableAccessPatterns tablePatterns = metrics.getTableAccessPatterns();
+        assertTrue(tablePatterns.isHasStrongCoAccessPatterns());
         
-        @SuppressWarnings("unchecked")
-        List<Map<String, Object>> combinations = (List<Map<String, Object>>) tablePatterns.get("frequentTableCombinations");
+        List<TableCombination> combinations = tablePatterns.getFrequentTableCombinations();
         assertEquals(1, combinations.size());
         
-        Map<String, Object> combo = combinations.get(0);
-        @SuppressWarnings("unchecked")
-        List<String> tables = (List<String>) combo.get("tables");
+        TableCombination combo = combinations.get(0);
+        List<String> tables = combo.getTables();
         assertTrue(tables.contains("Customer"));
         assertTrue(tables.contains("CustomerProfile"));
-        assertEquals(1000L, ((Number) combo.get("totalExecutions")).longValue());
+        assertEquals(1000L, combo.getTotalExecutions());
     }
     
     @Test
-    void testPerformanceAnalysis(@TempDir Path tempDir) throws IOException {
+    void testPerformanceAnalysis() {
         // Create queries with varying performance characteristics
         List<QueryStoreQuery> queries = Arrays.asList(
             createTestQuery("1", "SELECT * FROM Products", 100, 150.0, 120.0, 1000.0), // Slow query
             createTestQuery("2", "SELECT * FROM Orders WHERE Id = @0", 500, 5.0, 3.0, 10.0) // Fast query
         );
         
-        File outputFile = tempDir.resolve("perf_analysis.json").toFile();
-        analyzer.analyzeAndExport(queries, outputFile.getAbsolutePath(), "TestDB");
+        QueryStoreAnalysis analysis = analyzer.analyze(queries, "TestDB");
         
-        @SuppressWarnings("unchecked")
-        Map<String, Object> analysis = objectMapper.readValue(outputFile, Map.class);
-        @SuppressWarnings("unchecked")
-        Map<String, Object> metrics = (Map<String, Object>) analysis.get("qualifiedMetrics");
-        @SuppressWarnings("unchecked")
-        Map<String, Object> performance = (Map<String, Object>) metrics.get("performanceCharacteristics");
+        QualifiedMetrics metrics = analysis.getQualifiedMetrics();
+        PerformanceCharacteristics performance = metrics.getPerformanceCharacteristics();
         
-        assertEquals(1L, ((Number) performance.get("slowQueryCount")).longValue());
-        assertTrue((Boolean) performance.get("hasPerformanceIssues"));
+        assertEquals(1L, performance.getSlowQueryCount());
+        assertTrue(performance.isHasPerformanceIssues());
         
-        double avgDuration = (Double) performance.get("avgQueryDurationMs");
+        double avgDuration = performance.getAvgQueryDurationMs();
         assertTrue(avgDuration > 20); // Should be weighted average
     }
     
     @Test
-    void testAccessPatternDetection(@TempDir Path tempDir) throws IOException {
+    void testAccessPatternDetection() {
         List<QueryStoreQuery> queries = Arrays.asList(
             createTestQuery("1", "SELECT * FROM Users WHERE Id = @0", 100, 1.0, 0.8, 2.0),
             createTestQuery("2", "SELECT * FROM Products p JOIN Categories c ON p.CategoryId = c.Id", 50, 5.0, 4.0, 10.0),
             createTestQuery("3", "SELECT COUNT(*) FROM Orders WHERE Date BETWEEN @0 AND @1", 30, 10.0, 8.0, 100.0)
         );
         
-        File outputFile = tempDir.resolve("patterns_analysis.json").toFile();
-        analyzer.analyzeAndExport(queries, outputFile.getAbsolutePath(), "TestDB");
+        QueryStoreAnalysis analysis = analyzer.analyze(queries, "TestDB");
         
-        @SuppressWarnings("unchecked")
-        Map<String, Object> analysis = objectMapper.readValue(outputFile, Map.class);
-        @SuppressWarnings("unchecked")
-        Map<String, Object> metrics = (Map<String, Object>) analysis.get("qualifiedMetrics");
-        @SuppressWarnings("unchecked")
-        Map<String, Object> patterns = (Map<String, Object>) metrics.get("accessPatternDistribution");
+        QualifiedMetrics metrics = analysis.getQualifiedMetrics();
+        Map<String, Long> patterns = metrics.getAccessPatternDistribution();
         
-        assertEquals(1L, ((Number) patterns.get("KEY_LOOKUP")).longValue());
-        assertEquals(1L, ((Number) patterns.get("JOIN_QUERY")).longValue());
-        assertEquals(1L, ((Number) patterns.get("RANGE_SCAN")).longValue());
+        assertEquals(1L, patterns.get("KEY_LOOKUP").longValue());
+        assertEquals(1L, patterns.get("JOIN_QUERY").longValue());
+        assertEquals(1L, patterns.get("RANGE_SCAN").longValue());
     }
     
     @Test
-    void testEmptyQueryList(@TempDir Path tempDir) throws IOException {
-        List<QueryStoreQuery> emptyQueries = Arrays.asList();
+    void testEmptyQueryList() {
+        List<QueryStoreQuery> emptyQueries = List.of();
         
-        File outputFile = tempDir.resolve("empty_analysis.json").toFile();
-        analyzer.analyzeAndExport(emptyQueries, outputFile.getAbsolutePath(), "TestDB");
+        QueryStoreAnalysis analysis = analyzer.analyze(emptyQueries, "TestDB");
         
         // Should not throw exception
-        assertTrue(outputFile.exists());
-        
-        @SuppressWarnings("unchecked")
-        Map<String, Object> analysis = objectMapper.readValue(outputFile, Map.class);
-        assertEquals(0, analysis.get("totalQueriesAnalyzed"));
+        assertNotNull(analysis);
+        assertEquals(0, analysis.getTotalQueriesAnalyzed());
     }
     
     private QueryStoreQuery createTestQuery(String id, String sql, long executions, 
